# multimodal

./: .gitignore  CLAUDE.md  STAGES.md  live_vlm_qa.py  main.py  preview_rtmp.py  pyproject.toml  system_figure.mmd
.claude/: settings.json
.claude/discussion/: evaluation_discuss.md
.claude/tasks/: dashboard-streaming-fix-and-theme-plan.md  dashboard-ui-plan.md  eval-harness-plan.md  implement_vector_search_plan.md  long_term_memory_and_query_plan.md  long_term_memory_and_query_spec.md  long_term_query_logs_plan.md  refine_logging_strategy_ltm_plan.md  semantic_search_fix_plan.md  unified_runner_plan.md
camera_test/: .env.example  .gitignore  README.md  auto.crt  auto.key  browser_whep_worker.py  frame_sample.py  live_vlm_qa.py  mediamtx-phone.example.yml  mediamtx-tapo.example.yml  phone_location.html  preview_rtmp.py  preview_stream.py  pyproject.toml  stream_config.py  webrtc_capture.py  whep_client.py  whep_probe.py  whep_worker.py
capture/: __init__.py  camera_frame_source.py  stream_config.py
memory_log/: .env.example  .gitignore  README.md  pyproject.toml
memory_log/evals/: __init__.py  compare.py  drivers.py  make_sample.py  manifest.py  replay_source.py  report.py  run_live.py  run_ltm.py  scorers.py
memory_log/evals/adapters/: __init__.py  base.py  ego4d_nlq.py  egoschema.py  streaming_bench.py
memory_log/evals/datasets/toy/: desk_001.json
memory_log/evals/outputs/: comparison.html
memory_log/outputs/: geocode_cache.sqlite  memories.jsonl
memory_log/src/: config.py  daily_summary.py  db_writer.py  embed_index.py  embeddings.py  frame_source.py  geocode_cache.py  geocode_client.py  location.py  location_server.py  main.py  memory_db.py  memory_writer.py  passive_observer.py  query_log.py  run_all.py  schema.py  utils.py  vector_index.py  vlm_client.py
memory_log/src/dashboard/: __init__.py  __main__.py  server.py  service.py  sse.py
memory_log/src/dashboard/static/: index.html
memory_log/src/ltm_query/: __init__.py  __main__.py  answer_generator.py  cli.py  evidence.py  query_planner.py  retrieval.py  visual_grounding.py
memory_search/: .env.example  .gitignore  README.md  pyproject.toml
memory_search/src/: answerer.py  config.py  main.py  memory_loader.py  query_parser.py  retriever.py  schema.py  utils.py
providers/: __init__.py  ollama.py
vector_memory/: .env.example  .gitignore  README.md  pyproject.toml
vector_memory/src/: answerer.py  config.py  embedding_client.py  hybrid_retriever.py  main.py  memory_loader.py  query_parser.py  schema.py  utils.py  vector_store.py
vlm_smoke/: .env.example  .gitignore  README.md  pyproject.toml
vlm_smoke/src/: __init__.py  config.py  frame_source.py  main.py  utils.py  vlm_client.py
