[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "stream_config.py",
    "webrtc_capture.py",
    "preview_stream.py",
    "frame_sample.py",
    "live_vlm_qa.py",
]

[project]
name = "camera-test"
version = "0.1.0"
description = "Lightweight scripts for testing live camera streams before vlm_smoke and memory_log"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiortc>=1.9.0",
    "httpx>=0.28.0",
    "multimodal",
    "numpy>=2.4.6",
    "openai>=2.41.0",
    "opencv-python>=4.13.0.92",
    "python-dotenv>=1.2.2",
]

[project.scripts]
camera-preview = "preview_stream:main"
camera-sample = "frame_sample:main"
camera-vlm = "live_vlm_qa:main"

[tool.uv.sources]
multimodal = { path = "..", editable = true }
