[project]
name = "memory-log"
version = "0.1.0"
description = "Phase 2: long-term visual memory as JSONL for wearable multimodal assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "multimodal",
    "imagehash>=4.3.1",
    "numpy>=2.4.6",
    "openai>=2.41.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "tabulate>=0.10.0",
]

[tool.uv.sources]
multimodal = { path = "..", editable = true }
