[project]
name = "vector-memory"
version = "0.1.0"
description = "Phase 4: hybrid Chroma + embedding retrieval over JSONL visual memories"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.0",
    "openai>=2.41.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=3.4.0",
]
