[project]
name = "vlm-smoke"
version = "0.1.0"
description = "Phase 1: live visual QA smoke test for wearable multimodal assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "multimodal",
    "numpy>=2.4.6",
    "openai>=2.41.0",
    "opencv-python>=4.13.0.92",
    "python-dotenv>=1.2.2",
]

[tool.uv.sources]
multimodal = { path = "..", editable = true }
